--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
     <div id="loginScreen" class="container">
         <div class="login-container">
             <div class="login-header">
-                <h1><i class="fas fa-user-shield"></i> Portal LG</h1>
-                <p>Acesse sua conta para visualizar seus projetos</p>
+                <h1><i class="fas fa-user-shield"></i> Acesso Usuário</h1>
+                <p>Acesse para visualizar seus projetos e prazos.</p>
             </div>
             
             <div class="glass-card">
